--- a/Stories/package.json
+++ b/Stories/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.0-next.7",
     "@react-navigation/stack": "^6.0.0-next.15",
+    "faker": "^5.5.3",
     "random-profile-generator": "^2.3.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0"
